--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.25.3",
     "gatsby-plugin-google-analytics": "^2.5.0",
     "gatsby-plugin-sharp": "^2.8.0",
