--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-transformer-sharp": "^2.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-is": "^17.0.1",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
